# api-tabular

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  bumpr.rc  docker-compose-hydra.yml  docker-compose.yml  metrics_swagger.yaml  pyproject.toml  ressource_app_swagger.yaml  tabular_swagger.yaml  tag_version.sh
.circleci/: config.yml
api_tabular/: __init__.py  app.py  config_default.toml  error.py  metrics.py  query.py  utils.py
api_tabular/api/: __init__.py  app.py
api_tabular/api/handlers/: __init__.py  resource_handlers.py
api_tabular/api/routes/: __init__.py  resources.py
api_tabular/core/: __init__.py  cors.py  data.py  data_access.py  error.py  exceptions.py  health.py  models.py  query.py  query_builder.py  sentry.py  swagger.py  url.py  utils.py  version.py
api_tabular/mcp/: README.md  __init__.py  cli.py  datagouv_api_client.py  example_usage.py  http_mcp_server.py  lm_studio_config.json  mcp_config.json  resources.json  server.py  setup_mcp.sh  test_mcp.py
api_tabular/mcp/data/: README_scrape.md  mcp_available_resources.json  populate_mcp.py  populate_mcp_config.py  reuses_top100.csv  reuses_top100.json  scrape_reuses_top100.py
api_tabular/metrics/: app.py
api_tabular/tabular/: app.py  utils.py
csvapi/: __init__.py  app.py  query.py
db/: exceptions.csv  sample.csv  tables_index.csv
db/initdb/: 0-init.sql
tests/: conftest.py  test_api.py  test_api_utils.py  test_config.py  test_core_query.py  test_query.py  test_swagger.py  test_utils.py
udata_hydra_csvapi/: __init__.py  app.py  config.py  config_default.toml  error.py  metrics.py  query.py  utils.py
